--- a/proj1nb.ipynb
+++ b/proj1nb.ipynb
@@ -33,7 +33,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 604,
+   "execution_count": 632,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import plotly\n",
+    "plotly.offline.init_notebook_mode(connected=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 631,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 596,
+   "execution_count": 634,
    "metadata": {},
    "outputs": [
     {
@@ -89,16 +112,22 @@
        "Name: Country, dtype: int64"
       ]
      },
-     "execution_count": 596,
+     "execution_count": 634,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#importing the dataset as a df=ttl\n",
     "ttl = pd.read_csv('/Users/APinkerton/NYC_DS_A/projects/proj_1/OnlineRetail.csv',encoding= 'unicode_escape')\n",
     "ttl.columns\n",
     "ttl.head()\n",
-    "ttl.Country.value_counts()"
+    "#just to get a sense of the countries for the dataset's transactions\n",
+    "ttl.Country.value_counts()\n",
+    "#Below is jst the counts and totals--91% of the transactions are from the UK\n",
+    "# len(ttl) = 541,909 observations or transactions\n",
+    "# Uk = 495,478 (91%)\n",
+    "# EU ~98%"
    ]
   },
   {
@@ -119,6 +148,7 @@
     }
    ],
    "source": [
+    "#getting the unique values of the timestamps of transactions\n",
     "np.unique(ttl['InvoiceDate'])"
    ]
   },
@@ -240,6 +270,8 @@
     }
    ],
    "source": [
+    "#Splitting timestamps from the data in the dataframe--converted and then dropped the orignal \n",
+    "#expanding to keep all of the info from the timestamp\n",
     "date = ttl.InvoiceDate.str.split(\" \",expand=True)\n",
     "full = pd.merge(ttl, date, left_index=True, right_index=True)\n",
     "full.drop(columns=['InvoiceDate',1],inplace=True)\n",
@@ -248,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 540,
+   "execution_count": 638,
    "metadata": {},
    "outputs": [
     {
@@ -282,6 +314,9 @@
        "      <th>0</th>\n",
        "      <th>Sales_(GBP)</th>\n",
        "      <th>ret</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -294,9 +329,12 @@
        "      <td>2.55</td>\n",
        "      <td>17850.0</td>\n",
        "      <td>United Kingdom</td>\n",
-       "      <td>12/1/2010</td>\n",
+       "      <td>2010-12-01</td>\n",
        "      <td>15.30</td>\n",
        "      <td>False</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -307,9 +345,12 @@
        "      <td>3.39</td>\n",
        "      <td>17850.0</td>\n",
        "      <td>United Kingdom</td>\n",
-       "      <td>12/1/2010</td>\n",
+       "      <td>2010-12-01</td>\n",
        "      <td>20.34</td>\n",
        "      <td>False</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -320,9 +361,12 @@
        "      <td>2.75</td>\n",
        "      <td>17850.0</td>\n",
        "      <td>United Kingdom</td>\n",
-       "      <td>12/1/2010</td>\n",
+       "      <td>2010-12-01</td>\n",
        "      <td>22.00</td>\n",
        "      <td>False</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -333,9 +377,12 @@
        "      <td>3.39</td>\n",
        "      <td>17850.0</td>\n",
        "      <td>United Kingdom</td>\n",
-       "      <td>12/1/2010</td>\n",
+       "      <td>2010-12-01</td>\n",
        "      <td>20.34</td>\n",
        "      <td>False</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -346,9 +393,12 @@
        "      <td>3.39</td>\n",
        "      <td>17850.0</td>\n",
        "      <td>United Kingdom</td>\n",
-       "      <td>12/1/2010</td>\n",
+       "      <td>2010-12-01</td>\n",
        "      <td>20.34</td>\n",
        "      <td>False</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -362,21 +412,31 @@
        "3    536365    84029G  KNITTED UNION FLAG HOT WATER BOTTLE         6   \n",
        "4    536365    84029E       RED WOOLLY HOTTIE WHITE HEART.         6   \n",
        "\n",
-       "   UnitPrice  CustomerID         Country          0  Sales_(GBP)    ret  \n",
-       "0       2.55     17850.0  United Kingdom  12/1/2010        15.30  False  \n",
-       "1       3.39     17850.0  United Kingdom  12/1/2010        20.34  False  \n",
-       "2       2.75     17850.0  United Kingdom  12/1/2010        22.00  False  \n",
-       "3       3.39     17850.0  United Kingdom  12/1/2010        20.34  False  \n",
-       "4       3.39     17850.0  United Kingdom  12/1/2010        20.34  False  "
+       "   UnitPrice  CustomerID         Country          0  Sales_(GBP)    ret  \\\n",
+       "0       2.55     17850.0  United Kingdom 2010-12-01        15.30  False   \n",
+       "1       3.39     17850.0  United Kingdom 2010-12-01        20.34  False   \n",
+       "2       2.75     17850.0  United Kingdom 2010-12-01        22.00  False   \n",
+       "3       3.39     17850.0  United Kingdom 2010-12-01        20.34  False   \n",
+       "4       3.39     17850.0  United Kingdom 2010-12-01        20.34  False   \n",
+       "\n",
+       "   Month  day  year  \n",
+       "0     12    1  2010  \n",
+       "1     12    1  2010  \n",
+       "2     12    1  2010  \n",
+       "3     12    1  2010  \n",
+       "4     12    1  2010  "
       ]
      },
-     "execution_count": 540,
+     "execution_count": 638,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#using the dataset's Unit Price and Quantity to get the sales amount by product\n",
     "full['Sales_(GBP)']=full['Quantity']*full['UnitPrice']\n",
+    "#Creating a return flag--if a quantity is less than 0, then i classify the boolean of ret (return) as TRUE\n",
+    "#--else FALSE (so a sale)\n",
     "full['ret'] = full['Quantity'] < 0\n",
     "full.head()"
    ]
@@ -536,6 +596,7 @@
     }
    ],
    "source": [
+    "#converting to datetime, then converting datetime to new columns with month, day, and year separate\n",
     "full[0]=pd.to_datetime(full[0])\n",
     "full['Month']=full[0].dt.month\n",
     "full['day']=full[0].dt.day\n",
@@ -550,6 +611,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#I imported a day csv that I created in google sheets to quickly convert\n",
+    "#then dropped those columns into my working dataframe\n",
+    "#Retail companies tend to have a lot of time & date information, so I made sure to have all of that here\n",
+    "##Month is Calendar month--Typical month that anyone is used to seeing\n",
+    "#Day -- same with day\n",
+    "#Year--Same with year\n",
+    "#Wk is using the National Retail Federation's (NRF) 454 Calendar Week--acutally in this case it would be 445, since I am starting the year in January\n",
+    "#454 is a way of structuring the weeks and months so that weeks have the same number of weekdays between years so that they are comparable--always Sun-Sat in a week\n",
+    "#woy is Week of Year--starting with 1 in Jan, 4 weeks in Jan, another 4 in Feb, 5 in Mar, and then quarterly pattern follows the same 445 pattern \n",
     "dates = pd.read_csv('/Users/APinkerton/NYC_DS_A/projects/proj_1/days.csv')\n",
     "dates['date']=pd.to_datetime(dates['date'])\n",
     "dates.rename(columns={'Unnamed: 2':'woy'},inplace=True)"
@@ -911,33 +981,29 @@
     }
    ],
    "source": [
+    "#I included 454 Month as a Column, as it sometimes differs from Calendar month\n",
     "new['454_Month'] = new['Wk'].astype(str).str[0:3]\n",
     "new.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": 639,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Int64Index([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12], dtype='int64', name='Month')\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-545-48e7478eeda7>:14: SettingWithCopyWarning: \n",
+      "<ipython-input-639-d1b2ad77cb6c>:30: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  cal_month_ttl['build'][1]= round((cal_month_ttl['Sales_(GBP)'][1])/(cal_month_ttl['Sales_(GBP)'][12]),2)\n"
+      "\n"
      ]
     },
     {
@@ -1108,33 +1174,50 @@
        "12       568561  1182625.030   2.080032  0.121323   0.109836   0.81"
       ]
      },
-     "execution_count": 545,
+     "execution_count": 639,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "##Now I am starting to work with the transation data, and aggregating sales by the dates that I dropped into the DF above\n",
+    "#First grouping by the StockCode/SKU and product description--this is unique by product\n",
+    "\n",
+    "#First line is the minimum Week of Year that the product is sold--so a jury rigged 'launch week' essentially\n",
     "new.groupby(['StockCode','Description'])[['woy']].agg('min')\n",
     "\n",
-    "new.groupby(['StockCode','Description', 'Wk']).agg('sum').head()\n",
+    "#Grouping by product by week, making a weekly total DF\n",
+    "new.groupby(['StockCode','Description', 'Wk']).agg('sum')\n",
     "week_ttl = new.groupby(['Wk'])[['Quantity','Sales_(GBP)']].agg('sum')\n",
     "\n",
+    "#creating a monthly total sales, dropping product info for the monthly totals. I am using monthly totals for reference\n",
     "cal_month_ttl = new.groupby(['Month'])[['Quantity','Sales_(GBP)']].agg('sum').copy()\n",
     "cal_month_ttl['Unit_Cost']=cal_month_ttl['Sales_(GBP)']/cal_month_ttl['Quantity']\n",
-    "ttlsls = cal_month_ttl['Sales_(GBP)'].sum()\n",
+    "\n",
+    "#just getting a value for the total sales & units for month\n",
+    "ttlsls = round(cal_month_ttl['Sales_(GBP)'].sum(),0)\n",
     "ttlquan = cal_month_ttl['Quantity'].sum()\n",
+    "#tuple of the total sales and quantity\n",
     "monthly_ttls = (ttlsls,ttlquan)\n",
+    "\n",
+    "#putting in columns for each month's percent to total of the year--do this for revenue and units\n",
     "cal_month_ttl['% to Sls'] = cal_month_ttl['Sales_(GBP)'] / ttlsls\n",
     "cal_month_ttl['% to Quan'] = cal_month_ttl['Quantity'] / ttlquan\n",
-    "cal_month_ttl['build']=round(cal_month_ttl['Sales_(GBP)']/cal_month_ttl['Sales_(GBP)'].shift(1,axis=0),2)\n",
-    "cal_month_ttl['build'][1]= round((cal_month_ttl['Sales_(GBP)'][1])/(cal_month_ttl['Sales_(GBP)'][12]),2)\n",
     "\n",
+    "#build is just a month's total revenue or unit number over the previous month's value--so basically a multiplier over the previous month \n",
+    "#(build is usually at the monthly or weekly level)\n",
+    "cal_month_ttl['build']=round(cal_month_ttl['Sales_(GBP)']/cal_month_ttl['Sales_(GBP)'].shift(1,axis=0),2)\n",
+    "#this was a bit wonky, but I wanted the Jan build to be off of Dec, not null--in a normal company setting, I would calculate Jan's build off the previous Dec\n",
+    "#but I only have one year of data--this is what the warning is coming from\n",
+    "cal_month_ttl['build'][1]= round((cal_month_ttl['Sales_(GBP)'][1])/(cal_month_ttl['Sales_(GBP)'][12]),2)\n",
+    "#aggregating for 454 month\n",
     "month_454_ttl = new.groupby(['454_Month'])[['Quantity','Sales_(GBP)']].agg('sum')\n",
-    "yyz = cal_month_ttl.copy()\n",
-    "print(yyz.index)\n",
-    "yyz.reset_index()\n",
-    "yyz\n",
-    "##yyz = cal month total net sales numbers\n"
+    "\n",
+    "#just getting a separate DF for monthly total net sales\n",
+    "calendar_month_df = cal_month_ttl.copy()\n",
+    "calendar_month_df.reset_index()\n",
+    "calendar_month_df\n",
+    "##calendar_month_df = cal month total net sales numbers"
    ]
   },
   {
@@ -1143,6 +1226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# i commented this out, i'm getting rid of columns that I don't want plotted\n",
     "# yyz.drop(['Unit_Cost'],axis=1,inplace=True)"
    ]
   },
@@ -1306,6 +1390,9 @@
     }
    ],
    "source": [
+    "#this cell is for gross sales calculations--so taking out all returns from sales data. \n",
+    "#I'm doing pretty much the same calculations fro gross as I did for net\n",
+    "\n",
     "##Gross\n",
     "maskg = ~new['ret']\n",
     "gross = new.loc[maskg, :].copy()\n",
@@ -1321,7 +1408,8 @@
     "\n",
     "ttl_mo_gross['% to Gross U'] = ttl_mo_gross['Quantity'] / ttlgrossdol\n",
     "monthly_gross_ttls = (ttlgrossdol,ttlgrossquan)\n",
-    "ttl_mo_gross"
+    "ttl_mo_gross\n",
+    "##ttl_mo_gross cal month ttl gross sales numbers"
    ]
   },
   {
@@ -1341,6 +1429,7 @@
     }
    ],
    "source": [
+    "#Starting to create plots for sales\n",
     "sns.set_theme(style=\"darkgrid\")\n",
     "sns.lineplot(data=yyz)#,style)\n",
     "plt.show()"
@@ -1497,19 +1586,29 @@
     }
    ],
    "source": [
+    "#now I am starting to do calculations for returns now (so everything that has a Return = TRUE flag)\n",
+    "#Largely the same as the gross table, but with the Return Flag to true, not false\n",
+    "#return mask\n",
     "mask1 = new['ret']\n",
     "returns = new.loc[mask1, :].copy()\n",
-    "returns['Unit_Cost']=returns['Sales_(GBP)']/returns['Quantity']\n",
     "\n",
+    "#column calculations\n",
+    "returns['Unit_Price']=returns['Sales_(GBP)']/returns['Quantity']\n",
+    "\n",
+    "#total return calculations by month\n",
     "ttlretdol = returns['Sales_(GBP)'].sum()\n",
     "ttlretquan = returns['Quantity'].sum()\n",
     "\n",
+    "#just getting a percent to total for returns just like with month--\n",
+    "#this will come in handy to demonstrate the dropoff in sales from \n",
+    "#Dec>Jan can be partially attributed to Holiday/Gifting returns\n",
     "returns['% to Ret$'] = returns['Sales_(GBP)'] / ttlretdol\n",
     "returns['% to RetU'] = returns['Quantity'] / ttlretquan\n",
     "\n",
-    "\n",
+    "#total monthly returns DF\n",
     "ttl_mo_ret = returns.groupby(['Month'])[['Quantity','Sales_(GBP)','% to Ret$','% to RetU']].agg('sum')\n",
     "\n",
+    "#More return calculations\n",
     "ttl_mo_ret['% to RetU'] = ttl_mo_ret['Quantity'] / ttlretdol\n",
     "monthly_ttls = (ttlretdol,ttlretquan)\n",
     "ttl_mo_ret\n",
@@ -1569,6 +1668,8 @@
     }
    ],
    "source": [
+    "#Now I am starting to get into product level analysis\n",
+    "\n",
     "prod_tbl = new.groupby(['StockCode','Description'])[['Sales_(GBP)','Quantity']].agg('sum')\n",
     "above10 = prod_tbl.sort_values(by='Sales_(GBP)',ascending=False).head(217)\n",
     "topsls = above10['Sales_(GBP)'].sum()\n",
@@ -2245,7 +2346,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#iplot function will display the graph in the notebook, plot will create a \n",
+    "###separate html file in the notebook folder. It takes a Figure object as the input.\n",
+    "# To create a Figure object, we need to tell plotly what the data is and the layout of the figure.\n",
+    "# To customize the number of bins in the histogram, you need to tell plotly the starting point \n",
+    "####and the ending point, along with the size of each bin.\n",
+    "# In the layout, we can customize the title of the graph and the gap between two bins."
+   ]
   },
   {
    "cell_type": "code",
